Version 1.6+svn:
 * AI:
   * Fixed incorrect handling of poisoning attacks when suggesting best attack 
     in user interface
   * Fixed bug #13295: made enemy_units formula return only those units which
     are not incapacitated (for example, it now ignores stoned units )
 * Editor2:
   * New feature: exporting of selection coordinates to system clipboard
 * Graphics:
   * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman,
     Ogre/Young Ogre, Trapper, Ranger
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
      Czech, Dutch, German, Finnish, Hebrew, Hungarian, Indonesian, Italian,
      Norwegian, Polish, Russian, Serbian, Slovak, Swedish, Turkish
 * Multiplayer
   * Fixed missing faction column and misplaced player's name column
     (but faction column is still missing if the host uses 1.6.0)
 * Multiplayer server:
   * Implemented automatic saving of game replays.
   * Implemented the adminmsg command to allow players to send messages to
     currently available admins (FR #9218)
 * Miscellaneous and bugfixes:
   * Fixed an infinite loop issue when no music tracks could be loaded
   * Fixed compilation with -D_GLIBCXX_PARALLEL
   * Fixed handling of floating-point WML constants on localized Windows
     (impacts "submerge" animations and AI settings)
   * Fixed a bug with auto-stored WML variables not being restored correctly
   * Fixed a crash when sighted event killed the attacked unit

Version 1.6a:
 * User interface:
   * Remove a no longer valid assert (bug #13217)
   * Make sure the dialog always uses the full map area width
 * Multiplayer and AI:
   * Fixed bug #13222: Do not use the FormulaAI by default since it could lead
     to the AI doing nothing
   * Fixed bug #13218: infinite loop in the AI if it persistently tries to move
     unit to occupied square
   * Moved FormulaAI related debug output into the info log level

Version 1.6: