@@ -257,6 +257,10 @@ namespace image {
 	///SDL_FreeSurface()
 	surface get_image(const locator& i_locator, TYPE type=UNSCALED);
 
+	///function to check if an image fit into an hex
+	///return false if the image has not the standard size.
+	bool is_in_hex(const locator& i_locator);
+
 	///function to reverse an image. The image MUST have originally been returned from
 	///an image:: function. Returned images have the same semantics as for get_image()
 	///and must be freed using SDL_FreeSurface()
