@@ -174,7 +174,9 @@ frame_builder::frame_builder(const config& cfg,const std::string& frame_string) 
 	submerge_(""),
 	x_(""),
 	y_(""),
-	drawing_layer_("")
+	drawing_layer_(""),
+	in_hex_(false),
+	diagonal_in_hex_(false)
 {
 	image(image::locator(cfg[frame_string+"image"]),cfg[frame_string+"image_mod"]);
 	image_diagonal(image::locator(cfg[frame_string+"image_diagonal"]),cfg[frame_string+"image_mod"]);
@@ -230,18 +232,22 @@ const frame_parameters frame_builder::parameters(int current_time) const
 	result.x = x_.get_current_element(current_time);
 	result.y = y_.get_current_element(current_time);
 	result.drawing_layer = drawing_layer_.get_current_element(current_time,display::LAYER_UNIT_DEFAULT-display::LAYER_UNIT_FIRST);
+	result.in_hex = in_hex_;
+	result.diagonal_in_hex = diagonal_in_hex_;
 	return result;
 }
 frame_builder & frame_builder::image(const image::locator image ,const std::string & image_mod)
 {
 	image_ = image;
 	image_mod_ = image_mod;
+	in_hex_ = is_in_hex(image);
 	return *this;
 }
 frame_builder & frame_builder::image_diagonal(const image::locator image_diagonal,const std::string& image_mod)
 {
 	image_diagonal_ = image_diagonal;
 	image_mod_ = image_mod;
+	diagonal_in_hex_ = is_in_hex(image_diagonal);
 	return *this;
 }
 frame_builder & frame_builder::sound(const std::string& sound)
@@ -465,13 +471,16 @@ bool unit_frame::invalidate(const bool force,const int frame_time,const map_loca
 	const frame_parameters current_data = merge_parameters(frame_time,animation_val,engine_val,primary);
 	double tmp_offset = current_data.offset;
 	int d2 = game_display::get_singleton()->hex_size() / 2;
+	bool image_fit_hex = false;
 
 	image::locator image_loc;
 	if(direction != map_location::NORTH && direction != map_location::SOUTH) {
 		image_loc = current_data.image_diagonal;
+		image_fit_hex = current_data.diagonal_in_hex;
 	}
 	if(image_loc.is_void() || image_loc.get_filename() == "") { // invalid diag image, or not diagonal
 		image_loc = current_data.image;
+		image_fit_hex = current_data.in_hex;
 	}
 
 	surface image;
@@ -490,14 +499,22 @@ bool unit_frame::invalidate(const bool force,const int frame_time,const map_loca
 	if (image != NULL) {
 		const int x = static_cast<int>(tmp_offset * xdst + (1.0-tmp_offset) * xsrc)+current_data.x+d2-(image->w/2);
 		const int y = static_cast<int>(tmp_offset * ydst + (1.0-tmp_offset) * ysrc)+current_data.y+d2-(image->h/2);
+		const SDL_Rect r = {x,y,image->w,image->h};
+		// check if the unit fit in a hex
+		bool in_hex = image_fit_hex && r.x==xsrc && r.y==ysrc
+				&& r.w==disp->hex_size() && r.h==disp->hex_size();
+		// check if our underlying hexes are invalidated
+		bool rect_need_update = in_hex ?
+				disp->hex_need_update(src) : disp->rectangle_need_update(r);
 		// if we need to update ourselve because we changed, invalidate our hexes
 		// and return whether or not our hexs was invalidated
-		const SDL_Rect r = {x,y,image->w,image->h};
-		if(force || need_update() || disp->rectangle_need_update(r)){
+		if(force || need_update() || rect_need_update) {
 			// invalidate ouself to be called at redraw time
 			result |= disp->invalidate(src);
-			// invalidate all hex we plan to overwrite
-			result |= disp->invalidate_visible_locations_in_rect(r);
+			if(in_hex == false) {
+				// invalidate all hexes we plan to overwrite
+				result |= disp->invalidate_visible_locations_in_rect(r);
+			}
 		}
 	} else {
 		// we have no "redraw surface" but we still need to invalidate our own hex
@@ -529,14 +546,18 @@ const frame_parameters unit_frame::merge_parameters(int current_time,const frame
 
 	/** engine provides a default image to use for the unit when none is available */
 	result.image = current_val.image.is_void() || current_val.image.get_filename() == ""?animation_val.image:current_val.image;
+	result.in_hex = current_val.image.is_void() || current_val.image.get_filename() == ""?animation_val.in_hex:current_val.in_hex;
 	if(primary && ( result.image.is_void() || result.image.get_filename().empty())) {
 		result.image = engine_val.image;
+		result.in_hex = engine_val.in_hex;
 	}
 
 	/** engine provides a default image to use for the unit when none is available */
 	result.image_diagonal = current_val.image_diagonal.is_void() || current_val.image_diagonal.get_filename() == ""?animation_val.image_diagonal:current_val.image_diagonal;
+	result.diagonal_in_hex = current_val.image_diagonal.is_void() || current_val.image_diagonal.get_filename() == ""?animation_val.diagonal_in_hex:current_val.diagonal_in_hex;
 	if(primary && ( result.image_diagonal.is_void() || result.image_diagonal.get_filename().empty())) {
 		result.image_diagonal = engine_val.image_diagonal;
+		result.diagonal_in_hex = engine_val.diagonal_in_hex;
 	}
 
 	/** engine provides a string for "stoned" and "team color" modifications */
@@ -603,7 +624,9 @@ const frame_parameters unit_frame::merge_parameters(int current_time,const frame
 #ifdef LOW_MEM
 	if(primary) {
 		result.image= engine_val.image;
+		result.in_hex = engine_val.in_hex;
 		result.image_diagonal= engine_val.image;
+		result.diagonal_in_hex = engine_val.diagonal_in_hex;
 	}
 #endif
 	return result;
