@@ -85,7 +85,9 @@ class frame_parameters{
 	submerge(0.0),
 	x(0),
 	y(0),
-	drawing_layer(display::LAYER_UNIT_DEFAULT-display::LAYER_UNIT_FIRST)
+	drawing_layer(display::LAYER_UNIT_DEFAULT-display::LAYER_UNIT_FIRST),
+	in_hex(false),
+	diagonal_in_hex(false)
 	{};
 
 	image::locator image;
@@ -107,6 +109,8 @@ class frame_parameters{
 	int x;
 	int y;
 	int drawing_layer;
+	bool in_hex;
+	bool diagonal_in_hex;
 } ;
 /**
  * keep most parameters in a separate class to simplify handling of large
@@ -134,7 +138,9 @@ class frame_builder {
 		submerge_(""),
 		x_(""),
 		y_(""),
-		drawing_layer_(lexical_cast<std::string>(display::LAYER_UNIT_DEFAULT-display::LAYER_UNIT_FIRST))
+		drawing_layer_(lexical_cast<std::string>(display::LAYER_UNIT_DEFAULT-display::LAYER_UNIT_FIRST)),
+		in_hex_(false),
+		diagonal_in_hex_(false)
 	{};
 		frame_builder(const config& cfg,const std::string &frame_string = "");
 		/** allow easy chained modifications will raised assert if used after initialization */
@@ -178,7 +184,8 @@ class frame_builder {
 		progressive_int x_;
 		progressive_int y_;
 		progressive_int drawing_layer_;
-
+		bool in_hex_;
+		bool diagonal_in_hex_;
 };
 
 /** Describe a unit's animation sequence. */
