@@ -6,6 +6,9 @@ Version 1.6+svn:
      are not incapacitated (for example, it now ignores stoned units )
  * Editor2:
    * New feature: exporting of selection coordinates to system clipboard
+ * Engine Changes
+   * better detection of images fiting in a hex, should heavily reduce CPU
+   usage
  * Graphics:
    * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman,
      Ogre/Young Ogre, Trapper, Ranger
